main wrap style fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@
 
 	.main {
 		max-width: 1330px;
+		min-height: calc(100vh - 300px);
 		margin: auto;
 		padding: 0 15px;
 
